[package]
name = "aes128cfb8-api"
version = "0.1.0"
edition = "2021"

authors = [ "EnderKill98" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", optional = true }

[features]
log = [ "dep:log" ]
