[package]
name = "aes128cfb8-server"
version = "0.1.0"
edition = "2021"

authors = [ "EnderKill98" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = [ "full" ] }
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"
openssl = "0.10.45"
clap = { version = "4.0.32", features = [ "derive" ] }
aes128cfb8-api = { path = "../aes128cfb8-api" }

[features]
default = [ "verbose" ]
verbose = [ ]
